--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,6 +10,7 @@
         android:id="@+id/linearLayout2"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:background="@drawable/background2"
         android:orientation="horizontal"
         android:paddingBottom="5dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -72,6 +73,7 @@
         android:id="@+id/scrollView3"
         android:layout_width="match_parent"
         android:layout_height="681dp"
+        android:background="@drawable/background"
         android:scrollbars="none"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -180,23 +182,23 @@
                 app:layout_constraintVertical_bias="0.5">
 
                 <ImageView
-                    android:id="@+id/imageView9"
-                    android:layout_width="match_parent"
-                    android:layout_height="480dp"
-                    android:paddingTop="35dp"
-                    app:srcCompat="@drawable/my_pic" />
-
-                <ImageView
                     android:id="@+id/imageView10"
                     android:layout_width="match_parent"
-                    android:layout_height="480dp"
+                    android:layout_height="540dp"
+                    android:paddingTop="20dp"
                     app:srcCompat="@drawable/meme1" />
 
                 <ImageView
                     android:id="@+id/imageView11"
                     android:layout_width="match_parent"
-                    android:layout_height="480dp"
+                    android:layout_height="520dp"
                     app:srcCompat="@drawable/meme2" />
+
+                <ImageView
+                    android:id="@+id/imageView12"
+                    android:layout_width="match_parent"
+                    android:layout_height="520dp"
+                    app:srcCompat="@drawable/meme3" />
 
                 <ImageView
                     android:id="@+id/imageView13"
@@ -205,22 +207,23 @@
                     app:srcCompat="@drawable/meme5" />
 
                 <ImageView
-                    android:id="@+id/imageView12"
-                    android:layout_width="match_parent"
-                    android:layout_height="480dp"
-                    app:srcCompat="@drawable/meme3" />
-
-                <ImageView
                     android:id="@+id/imageView14"
                     android:layout_width="match_parent"
-                    android:layout_height="480dp"
+                    android:layout_height="520dp"
                     app:srcCompat="@drawable/meme4" />
+
+                <ImageView
+                    android:id="@+id/imageView9"
+                    android:layout_width="match_parent"
+                    android:layout_height="460dp"
+                    app:srcCompat="@drawable/my_pic" />
 
                 <TextView
                     android:id="@+id/textView"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="230dp"
+                    android:layout_marginTop="130dp"
+                    android:layout_marginBottom="80dp"
                     android:gravity="center"
                     android:text="@string/author" />
             </LinearLayout>
