--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,7 +22,7 @@
             android:id="@+id/imageView16"
             android:layout_width="100dp"
             android:layout_height="40dp"
-            android:layout_marginStart="10dp"
+            android:layout_marginStart="15dp"
             android:layout_marginTop="17dp"
             android:layout_marginBottom="5dp"
             android:layout_weight="1"
@@ -163,6 +163,7 @@
                         android:layout_width="95dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
+                        android:paddingRight="5dp"
                         app:srcCompat="@drawable/ss8" />
 
                 </LinearLayout>
