--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -171,7 +171,7 @@
 
             <LinearLayout
                 android:id="@+id/linearLayout"
-                android:layout_width="430dp"
+                android:layout_width="match_parent"
                 android:layout_height="3418dp"
                 android:baselineAligned="false"
                 android:orientation="vertical"
@@ -186,7 +186,7 @@
                     android:id="@+id/imageView10"
                     android:layout_width="match_parent"
                     android:layout_height="540dp"
-                    android:paddingTop="20dp"
+                    android:paddingTop="0dp"
                     app:srcCompat="@drawable/meme1" />
 
                 <ImageView
